added tasks functionality
